# llm-zoomcamp-2026-04-evaluation

./: README.md  homework.ipynb  homework.py  pyproject.toml  setup-environment.sh
